[gd_scene load_steps=6 format=2]

[ext_resource path="res://Escenas/Menu_opciones.gd" type="Script" id=1]
[ext_resource path="res://images/background/bg_2.png" type="Texture" id=2]
[ext_resource path="res://fonts/Enagol-Math-Medium.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://sound fx/over_button.wav" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=1]

size = 35
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="Menu_opciones" type="Node"]

script = ExtResource( 1 )

[node name="Fondo" type="TextureRect" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1280.0
margin_bottom = 720.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
stretch_mode = 0

[node name="atras" type="Button" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 958.0
margin_top = 631.0
margin_right = 1265.0
margin_bottom = 702.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Atrás"
flat = false
align = 1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="AcceptDialog" type="AcceptDialog" parent="." index="2"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 391.0
margin_top = 174.0
margin_right = 760.0
margin_bottom = 232.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
popup_exclusive = false
window_title = "¡Alerta!"
resizable = false
dialog_text = "¡Por el momento el juego no posee menú de opciones!"
dialog_hide_on_ok = true
_sections_unfolded = [ "Dialog", "Popup" ]

[node name="button_enter_sound" type="AudioStreamPlayer" parent="." index="3"]

stream = ExtResource( 4 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[connection signal="button_down" from="atras" to="." method="_on_atras_button_down"]

[connection signal="mouse_entered" from="atras" to="." method="_on_atras_mouse_entered"]


